Fix taamim not showing on highlighted words: switch to Taamey Frank CLM, remove bold from .active

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -19,7 +19,7 @@
   font-size: 1.4rem;
   font-weight: 700;
   color: #e2b714;
-  font-family: 'Frank Ruhl Libre', serif;
+  font-family: 'Taamey Frank CLM', serif;
 }
 
 .main {
