--- a/src/components/TaamPanel.module.css
+++ b/src/components/TaamPanel.module.css
@@ -13,7 +13,7 @@
 
 .wordDisplay {
   font-size: 1.8rem;
-  font-family: 'Frank Ruhl Libre', serif;
+  font-family: 'Taamey Frank CLM', serif;
   color: #e2b714;
   line-height: 3;
   min-height: 3em;
